--- a/.github/workflows/docker-publish-to-dh.yaml
+++ b/.github/workflows/docker-publish-to-dh.yaml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - "alpine:3.8"
+          - "alpine-3.8"
     steps:
       # https://github.com/actions/checkout
       - name: Checkout
